# multi-tokenizer

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  README.md  dev.requirements.txt  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: linitng.yml  release.yml
multi_tokenizer/: __init__.py  language_detect.py  tokenizer.py
multi_tokenizer/pretrained/: __init__.py  chinese_tokenizer.json  english_tokenizer.json  hindi_tokenizer.json  spanish_tokenizer.json
scripts/: gh_release.py
support/: evaluation.md  proposal.md  proposal_1.md  proposal_2.md  try_multitokenizer.ipynb
support/lang_detection/: lang_detect.ipynb
support/lang_specific_training/: bytelevelbpe-tokenizer-wiki.json  create_tokenizer.py  hf_tokenizer.ipynb  tokenizer-wiki.json
